domain/src/main/java/com/example/domain/error/ErrorInformation.java
package com.example.domain.error;

public interface ErrorInformation {

    ErrorTypeEnum getErrorType();

    String getErrorDetails();
}
